--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,9 @@ dependencies:
   dropdown_search:
   another_flushbar: ^1.10.17
   flutter_datetime_picker:
-
-
+  responsive_flutter: ^0.0.4
+  google_fonts:
+  lottie:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
